# oneapi-crystal

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: oneapi-build.yml
oneapi_crystal/: CMakeLists.txt  crystal.hpp
oneapi_crystal/block_functions/: join.dp.hpp  join.hpp  load.dp.hpp  load.hpp  predicate.dp.hpp  predicate.hpp  reduce.dp.hpp  reduce.hpp  store.dp.hpp  store.hpp
oneapi_crystal/tools/: duration_logger.hpp  kernel_config.hpp  queue_helpers.hpp
oneapi_crystal/utils/: atomic.hpp
operators/: CMakeLists.txt  generator.h  join.cpp  join.dp.cpp  project.cpp  project.dp.cpp
queries/: CMakeLists.txt  q11.cpp  q11.dp.cpp  q12.cpp  q12.dp.cpp  q21.cpp  q21.dp.cpp  q22.cpp  q22.dp.cpp  q23.cpp  q23.dp.cpp  q31.cpp  q31.dp.cpp  q32.cpp  q32.dp.cpp  q33.cpp  q33.dp.cpp  q34.cpp  q34.dp.cpp  q41.cpp  q41.dp.cpp  q42.cpp  q42.dp.cpp  q43.cpp  q43.dp.cpp  ssb_utils.h
ssb/dbgen/: qgen
